Hack to load src/test/data

--- a/jflex/examples/simple/BUILD
+++ b/jflex/examples/simple/BUILD
@@ -28,7 +28,7 @@ jflex(
 java_test(
     name = "YylexTest",
     srcs = ["src/test/java/YylexTest.java"],
-    resources = glob(["src/test/resources/**"]),
+    data = glob(["src/test/data/**"]),
     deps = [
         ":simple",
         "//third_party/com/google/truth",
