Create jflex rule for bazel (#401)
* Define the Bazel rule `jflex`. Fix #204 (Bazel support)
  - **N.B.** The rule uses JFlex 1.6.1 because v1.7.0 has missing dependencies (see #390)

* Show how to use the rule on example "simple"
  - Make `examples` a Bazel workspace
  - In an wish to support all build systems in the examples, show how to generate a lexer with Bazel on "simple".
  - Attempted to have a **java_test** on `Yylex`. However dropped, because the dump format has changed between 1.6.1 and 1.7.0. Blocked on #390 
  - Import the deps needed for **simple** via the bazel migration tool.
  - Also define, a few third_party aliases
  - **N.B.** Renamed ant build directory to **antbuild** because we cannot have both a `build` directory ant a `BUILD` file on case insensitive filesystems

* Add documentation

* Cache the bazel output & repo cache directories in Travis

--- a/jflex/build.xml
+++ b/jflex/build.xml
@@ -31,6 +31,7 @@
   <property name="junit.jar.path" value="junit/junit/${junit.version}/junit-${junit.version}.jar" />
 
   <!-- where build output goes, including the jflex jar -->
+  <!-- TODO(#304): Rename `build` directory to something else as Bazel uses `BUILD` files. -->
   <property name="build.dir" value="build"/>
   <property name="generated.sources.dir" value="${build.dir}/generated-sources"/>
   <property name="compile.output.dir" value="${build.dir}/classes"/>
