--- a/jflex/examples/simple/build.xml
+++ b/jflex/examples/simple/build.xml
@@ -7,8 +7,8 @@
   <target name="build" depends="clean,compile" />
 
   <target name="run" depends="compile">
-    <java classname="Yylex" classpath="build">
-      <arg line="src/test/resources/test.txt"/>
+    <java classname="Yylex" classpath="antbuild">
+      <arg line="src/test/data/test.txt"/>
     </java>
   </target>
 
@@ -17,17 +17,17 @@
   </target>
 
   <target name="compile" depends="scanner">
-    <javac destdir="build">
+    <javac destdir="antbuild">
       <src path="src/main/java/" />
-      <src path="build/"/>
+      <src path="antbuild/"/>
     </javac>
   </target>
 
   <target name="scanner">
-    <jflex file="src/main/jflex/simple.flex" destdir="build"/>
+    <jflex file="src/main/jflex/simple.flex" destdir="antbuild"/>
   </target>
 
   <target name="clean">
-    <delete dir="build"/>
+    <delete dir="antbuild"/>
   </target>
 </project>
