--- a/.travis.yml
+++ b/.travis.yml
@@ -53,7 +53,6 @@ matrix:
     - java -version
     - sudo apt-get install ./tools/bazel-0.16.1.deb
     sudo: true
-    after_success: blaze shutdown
 
 # Empty the previously built artifacts
 # They cannot be deleted in the before_cache phase,
@@ -75,6 +74,11 @@ cache:
   timeout: 86400  # 24 hours
   directories:
   - $HOME/.m2
+  # All our Bazel build artifacts
+  - $HOME/__bazel_output_base__/
+  # Items fetched from repositories
+  - $HOME/__bazel_travis_root__/cache
+  # DO NOT cache __bazel_output_travis__/install
   - jflex/lib
   - tools
 
