Travis: Use language minimal for bazel
> The minimal image contains:
> - version control tools
> - essential build tools such as gcc and make
> - network tools such as curl and essential Docker
https://docs.travis-ci.com/user/languages/minimal-and-generic/

--- a/.travis.yml
+++ b/.travis.yml
@@ -32,6 +32,7 @@ matrix:
   - name: "Ant JDK9"
     script: scripts/run-ant.sh
   - name: "Bazel"
+    language: minimal
     script: scripts/bazel.sh
     # Prerequisites for Bazel
     addons:
