--- a/.travis.yml
+++ b/.travis.yml
@@ -16,29 +16,29 @@ jdk:
 
 matrix:
   include:
-  - name: "Check Java format 🛂"
+  - name: "🛂 Check Java format"
     script: scripts/test-java-format.sh
     language: generic
-  - name: "Maven 🔨 (compile, unit test, uberjar, ubersrcs, site)"
+  - name: "🔨 Maven (compile, unit test, uberjar, ubersrcs, site)"
     script:
     - scripts/test-unit.sh
     - scripts/mvn-site.sh
     - scripts/mvn-aggregate-srcs.sh
     env: TEST_SUITE=unit
     language: generic
-  - name: "Regression tests 📝"
+  - name: "📝 Regression tests"
     script:
     - scripts/mvn-install-fastbuild.sh jflex-maven-plugin,testsuite/jflex-testsuite-maven-plugin
     - scripts/test-regression.sh
   # TODO(regisd): Remove the ant build, it only adds maintenance burden
-  - name: "Ant build 🐜"
+  - name: "🐜 Ant build"
     script: scripts/ant-build.sh
-  - name: "Examples 😎 (mvn, ant, make)"
+  - name: "😎 Examples (mvn, ant, make)"
     script: scripts/test-examples.sh
-  - name: "Examples 😎 (mvn, ant, make) — JDK7"
+  - name: "👴 Examples (mvn, ant, make) — JDK7"
     script: scripts/test-examples.sh
     jdk: openjdk7
-  - name: "Examples 😎 (with Bazel)"
+  - name: "😎 Examples (with Bazel)"
     language: generic
     script:
     - scripts/mvn-install-fastbuild.sh
