--- a/pom.xml
+++ b/pom.xml
@@ -106,12 +106,12 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>20.0</version>
+        <version>26.0-jre</version>
       </dependency>
       <dependency>
         <groupId>com.google.truth</groupId>
         <artifactId>truth</artifactId>
-        <version>0.36</version>
+        <version>0.42</version>
       </dependency>
       <dependency>
         <groupId>commons-io</groupId>
@@ -131,7 +131,7 @@
       <dependency>
         <groupId>org.apache.ant</groupId>
         <artifactId>ant</artifactId>
-        <version>1.9.7</version>
+        <version>1.10.5</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven</groupId>
@@ -151,7 +151,7 @@
       <dependency>
         <groupId>org.apache.maven.plugin-tools</groupId>
         <artifactId>maven-plugin-annotations</artifactId>
-        <version>3.5</version>
+        <version>3.5.2</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven.plugin-testing</groupId>
@@ -166,7 +166,7 @@
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
-        <version>2.11.0</version>
+        <version>2.23.0</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
