Add a reporting module
Maven executes the jflex-parent first ; so we need a different module to aggregate reports.

--- a/pom.xml
+++ b/pom.xml
@@ -54,6 +54,7 @@
     <module>jflex</module>
     <module>jflex-maven-plugin</module>
     <module>testsuite</module>
+    <module>report-module</module>
   </modules>
   <mailingLists>
     <mailingList>
