--- a/.travis.yml
+++ b/.travis.yml
@@ -24,6 +24,7 @@ matrix:
     - scripts/test-unit.sh
     - scripts/mvn-site.sh
     - scripts/mvn-aggregate-srcs.sh
+    after_success: scripts/send-code-coverage.sh
     env: TEST_SUITE=unit
     language: generic
   - name: "📝 Regression tests"
@@ -66,7 +67,8 @@ matrix:
 # Empty the previously built artifacts
 # They cannot be deleted in the before_cache phase,
 # otherwise `mvn site` fails in the before_deploy phase.
-before_install: ./scripts/clean.sh
+before_install:
+- ./scripts/clean.sh
 
 install:
 - java -version
