Revert "Uodate to Guava 26"
This reverts commit 69dceffea065a9d197cc3f1f9205cc0a14537620.

Guava 21+ requires JDK8

--- a/pom.xml
+++ b/pom.xml
@@ -107,7 +107,8 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
-        <version>26.0-jre</version>
+        <!-- Release 21.0 requires JDK 1.8 or newer. -->
+        <version>20.0</version>
       </dependency>
       <dependency>
         <groupId>com.google.truth</groupId>
