--- a/pom.xml
+++ b/pom.xml
@@ -107,12 +107,13 @@
       <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
+        <!-- Release 21.0 requires JDK 1.8 or newer. -->
         <version>20.0</version>
       </dependency>
       <dependency>
         <groupId>com.google.truth</groupId>
         <artifactId>truth</artifactId>
-        <version>0.36</version>
+        <version>0.42</version>
       </dependency>
       <dependency>
         <groupId>commons-io</groupId>
@@ -132,7 +133,7 @@
       <dependency>
         <groupId>org.apache.ant</groupId>
         <artifactId>ant</artifactId>
-        <version>1.9.7</version>
+        <version>1.10.5</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven</groupId>
@@ -152,7 +153,7 @@
       <dependency>
         <groupId>org.apache.maven.plugin-tools</groupId>
         <artifactId>maven-plugin-annotations</artifactId>
-        <version>3.5</version>
+        <version>3.5.2</version>
       </dependency>
       <dependency>
         <groupId>org.apache.maven.plugin-testing</groupId>
@@ -167,7 +168,7 @@
       <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-core</artifactId>
-        <version>2.11.0</version>
+        <version>2.23.0</version>
         <scope>test</scope>
       </dependency>
     </dependencies>
