Don't infer package name from lex rule names.
Fix #104

Also, make ClassInfo immutable.

--- a/pom.xml
+++ b/pom.xml
@@ -105,6 +105,11 @@
   <dependencyManagement>
     <dependencies>
       <dependency>
+        <groupId>com.google.code.findbugs</groupId>
+        <artifactId>jsr305</artifactId>
+        <version>3.0.2</version>
+      </dependency>
+      <dependency>
         <groupId>com.google.guava</groupId>
         <artifactId>guava</artifactId>
         <!-- Release 21.0 requires JDK 1.8 or newer. -->
