--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -5,11 +5,12 @@
 # Note that results for all files classified with a tag are hidden.
 path_classifiers:
   test:
-  - "**/src/test/**"
+  - "src/test/**"
   docs:
   - "LICENSE*"
-  - "**/*.md"
-  third-party:
-  - "cup/**"
-  - "third_party/**"
-
+  - "*.md"
+  third_party:
+  - "/cup/**"
+  - "/third_party/**"
+  generated:
+  - "/jflex/src/main/java/jflex/unicode/data/**"
