lgmt.yml: ignore generated Unicode_x_y.java files (#419)
* ignore generated Unicde_x_y.java files

* Add doc about ant matcher

--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -3,13 +3,15 @@
 # Format at https://help.semmle.com/lgtm-enterprise/user/help/lgtm.yml-configuration-file.html
 
 # Note that results for all files classified with a tag are hidden.
+# Path syntax is ant matcher https://confluence.atlassian.com/fisheye/pattern-matching-guide-298976797.html
 path_classifiers:
   test:
-  - "**/src/test/**"
+  - "src/test/**"
   docs:
   - "LICENSE*"
-  - "**/*.md"
-  third-party:
-  - "cup/**"
-  - "third_party/**"
-
+  - "*.md"
+  third_party:
+  - "/cup/**"
+  - "/third_party/**"
+  generated:
+  - "/jflex/src/main/java/jflex/unicode/data/**"
