--- a/.lgtm.yml
+++ b/.lgtm.yml
@@ -5,13 +5,13 @@
 # Note that results for all files classified with a tag are hidden.
 # Path syntax is ant matcher https://confluence.atlassian.com/fisheye/pattern-matching-guide-298976797.html
 path_classifiers:
-#  test:
-#  - "src/test/**/*"
+  test:
+  - "src/test"
   docs:
   - "LICENSE*"
   - "*.md"
-#  third_party:
-#  - "/cup/**/*"
-#  - "/third_party/**/*"
+  third_party:
+  - "/cup"
+  - "/third_party"
   generated:
   - "/jflex/src/main/java/jflex/unicode/data/Unicode_*.java"
