Revert: Ubuntu cannot use tlmgr
nknown directive ...containerchecksum 400c4de374d02934965b5488f37c1b052ade07c2acfae957c9846390b2b78315c6aed2b533a2271bbacabd77c40536b63973bd42e2686f4c6d25d1f4c5b4709e... , please fix it! at /usr/share/texlive/tlpkg/TeXLive/TLPOBJ.pm line 210, <$retfh> line 6247.

https://tex.stackexchange.com/questions/313768/why-getting-this-error-tlmgr-unknown-directive

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,7 @@ matrix:
     install:
     # pandoc used for building the doc
     # texlive used for PDF output
-    # xzdec use by texlive manager to install \LaTeX packages
-    - sudo apt-get install -y pandoc texlive xzdec
-    - tlmgr init-usertree
-    - tlmgr install upquote
+    - sudo apt-get install -y pandoc texlive
     script:
     - cd docs; make; cd ..
 
