Install texlive-latex-extra
Provides a4wide.sty and upquote.sty

https://packages.ubuntu.com/trusty/all/texlive-latex-extra/filelist

--- a/.travis.yml
+++ b/.travis.yml
@@ -21,7 +21,8 @@ matrix:
     install:
     # pandoc used for building the doc
     # texlive used for PDF output
-    - sudo apt-get install -y pandoc texlive
+    # texlive-latex-extra provides extra styles such as a4wide and upquote.sty
+    - sudo apt-get install -y pandoc texlive texlive-latex-extra
     script:
     - cd docs; make; cd ..
 
