Install pandoc-citeproc

--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ matrix:
     # pandoc used for building the doc
     # texlive used for PDF output
     # texlive-latex-extra provides extra styles such as a4wide and upquote.sty
-    - sudo apt-get install -y pandoc texlive texlive-latex-extra
+    - sudo apt-get install -y pandoc pandoc-citeproc texlive texlive-latex-extra
     script:
     - cd docs; make; cd ..
 
