"stable" is now a branch, not a tag.

--- a/jflex/examples/WORKSPACE
+++ b/jflex/examples/WORKSPACE
@@ -9,7 +9,7 @@ load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
 git_repository(
     name = "jflex_rules",
     remote = "https://github.com/jflex-de/bazel_rules.git",
-    tag = "stable",
+    branch = "stable",
 )
 
 load("@jflex_rules//jflex:deps.bzl", "jflex_deps")
