Enable the test for "simple" in Bazel.

--- a/jflex/examples/WORKSPACE
+++ b/jflex/examples/WORKSPACE
@@ -8,8 +8,8 @@ load("@bazel_tools//tools/build_defs/repo:git.bzl", "git_repository")
 
 git_repository(
     name = "jflex_rules",
-    remote = "https://github.com/jflex-de/bazel_rules.git",
     branch = "stable",
+    remote = "https://github.com/jflex-de/bazel_rules.git",
 )
 
 load("@jflex_rules//jflex:deps.bzl", "jflex_deps")
@@ -17,19 +17,13 @@ load("@jflex_rules//jflex:deps.bzl", "jflex_deps")
 jflex_deps()
 
 maven_jar(
-  name = "com_google_truth_truth",
-  artifact = "com.google.truth:truth:0.36",
-  repository = "http://jcenter.bintray.com/",
+    name = "com_google_truth_truth",
+    artifact = "com.google.truth:truth:0.36",
+    repository = "http://jcenter.bintray.com/",
 )
 
 maven_jar(
     name = "com_google_guava_guava",
-    artifact = 'com.google.guava:guava:jar:26.0-jre',
-      repository = "http://jcenter.bintray.com/",
-)
-
-maven_jar(
-    name = "junit_junit",
-    artifact = '',
-      repository = "http://jcenter.bintray.com/",
+    artifact = "com.google.guava:guava:jar:26.0-jre",
+    repository = "http://jcenter.bintray.com/",
 )
