--- a/jflex/examples/simple/src/test/BUILD
+++ b/jflex/examples/simple/src/test/BUILD
@@ -1,6 +1,10 @@
 java_test(
     name = "YylexTest",
     srcs = ["java/YylexTest.java"],
+    data = [
+        "data/output.good",
+        "data/test.txt",
+    ],
     deps = [
         "//simple",
         "//third_party/com/google/truth",
