--- a/jflex/pom.xml
+++ b/jflex/pom.xml
@@ -53,6 +53,10 @@
   </developers>
   <dependencies>
     <dependency>
+      <groupId>com.google.auto.value</groupId>
+      <artifactId>auto-value</artifactId>
+    </dependency>
+    <dependency>
       <groupId>de.jflex</groupId>
       <artifactId>cup_runtime</artifactId>
       <version>${cup.version}</version>
