--- a/jflex/pom.xml
+++ b/jflex/pom.xml
@@ -54,7 +54,7 @@
   <dependencies>
     <dependency>
       <groupId>com.google.auto.value</groupId>
-      <artifactId>auto-value</artifactId>
+      <artifactId>auto-value-annotations</artifactId>
     </dependency>
     <dependency>
       <groupId>de.jflex</groupId>
@@ -65,6 +65,11 @@
       <groupId>org.apache.ant</groupId>
       <artifactId>ant</artifactId>
       <scope>compile</scope>
+    </dependency>
+    <dependency>
+      <groupId>com.google.auto.value</groupId>
+      <artifactId>auto-value</artifactId>
+      <scope>provided</scope>
     </dependency>
     <dependency>
       <groupId>junit</groupId>
