--- a/pom.xml
+++ b/pom.xml
@@ -106,8 +106,14 @@
     <dependencies>
       <dependency>
         <groupId>com.google.auto.value</groupId>
+        <artifactId>auto-value-annotations</artifactId>
+        <version>1.6.2</version>
+      </dependency>
+      <dependency>
+        <groupId>com.google.auto.value</groupId>
         <artifactId>auto-value</artifactId>
-        <version>1.5.2</version>
+        <version>1.6.2</version>
+        <scope>provided</scope>
       </dependency>
       <dependency>
         <groupId>com.google.code.findbugs</groupId>
