Try the ivy-download snippet
Now fails with circular deps thruth:0.36->gwt->truth:0.35

--- a/.travis.yml
+++ b/.travis.yml
@@ -101,6 +101,7 @@ cache:
   timeout: 86400  # 24 hours
   directories:
   - $HOME/.m2
+  - $HOME/.ant
   # All our Bazel build artifacts
   - $HOME/__bazel_output_base__/
   # Items fetched from repositories
