--- a/jflex/examples/simple/build.xml
+++ b/jflex/examples/simple/build.xml
@@ -1,10 +1,35 @@
 <project xmlns:ivy="antlib:org.apache.ivy.ant" name="simple scanner" default="build">
 
+  <!-- JFlex task -->
   <property name="jflex" value="../../target/jflex-full-1.7.1-SNAPSHOT.jar"/>
-  <ivy:retrieve/>
-
   <taskdef classname="jflex.anttask.JFlexTask" name="jflex" classpath="${jflex}"/>
 
+  <!-- ivy installer -->
+  <property name="ivy.install.version" value="2.5.0-rc1"/>
+  <property name="ivy.home" value="${user.home}/.ant"/>
+  <property name="ivy.jar.dir" value="${ivy.home}/lib"/>
+  <property name="ivy.jar.file" value="${ivy.jar.dir}/ivy.jar"/>
+  <target name="download-ivy" unless="offline">
+    <mkdir dir="${ivy.jar.dir}"/>
+    <!-- download Ivy from web site so that it can be used even without any special installation -->
+    <get
+        src="https://repo1.maven.org/maven2/org/apache/ivy/ivy/${ivy.install.version}/ivy-${ivy.install.version}.jar"
+        dest="${ivy.jar.file}" usetimestamp="true"/>
+  </target>
+  <target name="init-ivy" depends="download-ivy">
+    <!-- try to load Ivy here from Ivy home, in case the user has not already dropped
+         it into Ant's lib dir (note that the latter copy will always take precedence).
+         We will not fail as long as local lib dir exists (it may be empty) and
+         Ivy is in at least one of Ant's lib dir or the local lib dir. -->
+    <path id="ivy.lib.path">
+      <fileset dir="${ivy.jar.dir}" includes="*.jar"/>
+    </path>
+    <taskdef resource="org/apache/ivy/ant/antlib.xml"
+        uri="antlib:org.apache.ivy.ant" classpathref="ivy.lib.path"/>
+  </target>
+
+
+  <!-- Sample project -->
   <target name="run" depends="build">
     <java classname="Yylex" classpath="antbuild">
       <arg line="src/test/data/test.txt"/>
@@ -14,19 +39,19 @@
   <target name="test" depends="build">
     <junit>
       <test name="YylexTest">
-        <formatter type="plain" usefile="false" />
+        <formatter type="plain" usefile="false"/>
       </test>
       <classpath refid="ivy-deps"/>
       <classpath refid="build-artifacts"/>
     </junit>
   </target>
 
-  <target name="build" depends="scanner">
-    <javac destdir="antbuild">
-      <src path="src/main/java/" />
-      <src path="src/test/java" />
+  <target name="build" depends="scanner,init-ivy">
+    <ivy:cachepath pathid="lib.path.id"/>
+    <javac destdir="antbuild" classpathref="lib.path.id">
+      <src path="src/main/java/"/>
+      <src path="src/test/java"/>
       <src path="antbuild/"/>
-      <classpath refid="ivy-deps"/>
     </javac>
   </target>
 
@@ -37,12 +62,6 @@
   <target name="clean">
     <delete dir="antbuild"/>
   </target>
-
-  <path id="ivy-deps">
-    <fileset dir="${ivy.lib.dir}">
-      <include name="*.jar"/>
-    </fileset>
-  </path>
 
   <path id="build-artifacts">
     <pathelement path="antbuild"/>
